        Reviewed by Justin Garcia.

Fix execCommand() 'super' and 'sub' commands to add <sup> and <sub> in quirks mode, and to toggle when called twice
        https://bugs.webkit.org/show_bug.cgi?id=17733

        Test changed: editing/execCommand/toggle-styles-expected.txt

        * editing/ApplyStyleCommand.cpp:
        (WebCore::StyleChange::applySubscript):
        (WebCore::StyleChange::applySuperscript):
        (WebCore::StyleChange::StyleChange):
        (WebCore::StyleChange::init):
        (WebCore::StyleChange::checkForLegacyHTMLStyleChange):
        (WebCore::ApplyStyleCommand::isHTMLStyleNode):
        (WebCore::ApplyStyleCommand::addInlineStyleIfNeeded):
        * editing/EditorCommand.cpp:
        (WebCore::executeSubscript):
        (WebCore::executeSuperscript):
        * editing/htmlediting.cpp:
        (WebCore::createHTMLElement):
        * editing/htmlediting.h:

Canonical link: https://commits.webkit.org/32287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40097 268f45cc-cd09-0410-ab3c-d52691b4dbfc