WebCore/editing/htmlediting.cpp
@@ -785,9 +785,14 @@ PassRefPtr<HTMLElement> createListItemElement(Document* document)
     return new HTMLLIElement(liTag, document);
 }
 
+PassRefPtr<HTMLElement> createHTMLElement(Document* document, const QualifiedName& name)
+{
+    return HTMLElementFactory::createHTMLElement(name, document, 0, false);
+}
+
 PassRefPtr<HTMLElement> createHTMLElement(Document* document, const AtomicString& tagName)
 {
-    return HTMLElementFactory::createHTMLElement(QualifiedName(nullAtom, tagName, xhtmlNamespaceURI), document, 0, false);
+    return createHTMLElement(document, QualifiedName(nullAtom, tagName, xhtmlNamespaceURI));
 }
 
 bool isTabSpanNode(const Node *node)
